--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ a:active {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .item {
@@ -91,6 +92,7 @@ a:active {
   object-fit: cover;
   object-position: center bottom;
 }
+
 .promos {
   font-weight: bold;
   color: red;
